# SVRTK

./: .gitignore  BasisProject.cmake  CMakeLists.txt  InstallationInstructions.txt  README.md
docker/: Dockerfile  Dockerfile.txt
docs/: citation.md  conf.py  docker.md  index.rst  installation.md  license.md  requirements.txt  run.md
gadgetron/: gadgetron_svrtk.xml  nifti_python_gadgetron_haste.py
scripts/: propagate-mask-3d-thorax-atlas.sh  propagate-mask-4d.sh  recon-t2s-mc-4d.sh  reorient.py  run_3d_rigid_svr_for_phantom_brain_dataset.sh
src/: CMakeLists.txt  Dictionary.cc  MeanShift.cc  NLDenoising.cc  Reconstruction.cc  ReconstructionCardiac4D.cc  ReconstructionCardiacVelocity4D.cc  ReconstructionDWI.cc  ReconstructionFFD.cc  ReconstructionqMRI.cc  SphericalHarmonics.cc  Utility.cc
test/: CMakeLists.txt  TestCommon.cc  TestCommon.h  testReconstruction.cc
tools/: CMakeLists.txt  FitDictionary.cc  centre-volume.cc  centre_volume.cc  check-server.cc  combine-masks.cc  combine-patches.cc  combine_masks.cc  combine_patches.cc  convert.cc  crop-image.cc  crop_volume.cc  enlarge-image.cc  enlarge_image.cc  extract-label-brain-lr.cc  extract-label.cc  extract-packages.cc  filter-image-background.cc  filter_background.cc  generate_phantoms.cc  get-dt.cc  get-middle-limits.cc  get-t.cc  guess-resolution.cc  guess-thickness.cc  image-label-statistics.cc  initialise_volume.cc  label-biometry-brain.cc  mask-image.cc  mask_stats_4d.cc  mask_volume.cc  median-average.cc  multiply_volumes.cc  nan.cc  pad-3d.cc  pad-image.cc  pad_image.cc  prepare-for-cnn.cc  (+33 more)
(+29 files in other folders)
